add API; API doc; docker-compose
