# src/api/controllers/PlayerController.ts
@@ -1,32 +1,68 @@
-import models from '../../models';
-import config from '../../config/app';
-import logger from '../../services/logger';
-import AppError from '../../services/AppError';
-import * as Ajv from 'ajv';
-import * as _ from 'lodash';
+import PlayersService from "../../services/PlayersService";
+import config from "../../config/app";
+import logger from "../../services/logger";
+import AppError from "../../services/AppError";
+import * as _ from "lodash";
+import { Context } from "koa";
 
-const ajv = Ajv({ allErrors: true });
+/**
+ * post /fund?playerId=P1&points=300
+ *
+ * @param ctx
+ */
+const fund = async function(ctx: Context) {
+  let playerId = ctx.request.query.playerId;
+  let points = +ctx.request.query.points;
 
-// post /take
-const take = async function (ctx) {
+  if (!playerId) throw new AppError(400, "Parameter 'playerId' is required!");
+  if (!_.isInteger(points))
+    throw new AppError(400, "Paramater 'points' is incorrect!");
+  if (points < 0)
+    throw new AppError(400, "Paramater 'points' must be greater than zero!");
 
-    ctx.body = {};
+  await PlayersService.fund(playerId, points);
+  ctx.body = null;
 };
 
-// post /fund
-const fund = async function (ctx) {
+/**
+ * post /take?playerId=P1&points=300
+ *
+ * @param ctx
+ */
+const take = async function(ctx: Context) {
+  let playerId = ctx.request.query.playerId;
+  let points = +ctx.request.query.points;
 
-    ctx.body = {};
+  if (!playerId) throw new AppError(400, "Parameter 'playerId' is required!");
+  if (!_.isInteger(points))
+    throw new AppError(400, "Paramater 'points' is incorrect!");
+  if (points < 0)
+    throw new AppError(400, "Paramater 'points' must be greater than zero!");
+
+  await PlayersService.take(playerId, points);
+  ctx.body = null;
 };
 
-// get /balance
-const balance = async function (ctx) {
+/**
+ * get /balance?playerId=P1
+ *
+ * @param ctx
+ */
+const balance = async function(ctx: Context) {
+  let playerId = ctx.request.query.playerId;
 
-    ctx.body = {};
+  if (!playerId) throw new AppError(400, "Parameter 'playerId' is required!");
+
+  let balance = await PlayersService.balance(playerId);
+
+  ctx.body = {
+      playerId,
+      balance
+  };
 };
 
 export default {
-    take,
-    fund,
-    balance
+  take,
+  fund,
+  balance
 };
