# src/config/routes.ts
@@ -1,13 +1,13 @@
 import * as Router from "koa-router";
 import PlayerController from "../api/controllers/PlayerController";
 import TournamentController from "../api/controllers/TournamentController";
-import ServiceController from "../api/controllers/ServiceController";
+import AppController from "../api/controllers/AppController";
 
 let router = new Router({
   prefix: ""
 });
 
-router.post("/reset", ServiceController.reset);
+router.post("/reset", AppController.reset);
 
 router.post("/take", PlayerController.take);
 router.post("/fund", PlayerController.fund);
