# src/models/TournamentsWinners.ts
@@ -1,18 +1,21 @@
 import models from "./index";
 
 export default function(sequelize, DataTypes) {
-
   const fields = {
     id: {
       type: DataTypes.BIGINT,
       autoIncrement: true,
       primaryKey: true
     },
-    name: {
-      type: DataTypes.STRING(256),
-      unique: true
+    tournamentId: {
+      type: DataTypes.BIGINT,
+      allowNull: false,
     },
-    balance: {
+    playerId: {
+      type: DataTypes.BIGINT,
+      allowNull: false,
+    },
+    prize: {
       type: DataTypes.DECIMAL(1000, 2)
     }
   };
@@ -23,19 +26,15 @@ export default function(sequelize, DataTypes) {
 
   const instanceMethods = {};
 
-  const relations = {};
-
-  let players = sequelize.define("Players", fields, {
+  let tournamentsWinners = sequelize.define("TournamentsWinners", fields, {
     indexes,
     hooks,
     instanceMethods,
     timestamps: true,
     freezeTableName: true,
     paranoid: false,
-    classMethods: {
-      relations
-    }
+    classMethods: {}
   });
 
-  return players;
+  return tournamentsWinners;
 }
